# Smart-Office-Librarian

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
backend/: .env.example  .flake8  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_output.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/connectors/: __init__.py  base_connector.py
backend/app/connectors/github/: __init__.py  client.py  diff_scanner.py  extractor.py  ignore_rules.py  validators.py
backend/app/core/: caching.py  config.py  errors.py  logging.py  metrics.py  middleware.py  security.py  telemetry.py
backend/app/db/: base.py  models.py  session.py
backend/app/rag/: pipeline.py
backend/app/types/: __init__.py  evaluation.py  generation.py  ids.py  pagination.py  retrieval.py
backend/app/workers/: celery_app.py  retry_policy.py
backend/scripts/: backup_db.sh  evaluate_golden_questions.py  health_check.sh  migrate_index.py  restore_db.sh  seed_db.py  tune_threshold.py
backend/tests/: conftest.py
backend/tests/evaluation/: test_golden_questions.py  test_latency.py  test_pqs.py  test_threshold_tuning.py
backend/tests/integration/: test_api.py  test_audit_logging.py  test_auth_flow.py  test_data_retention.py  test_feedback_flow.py  test_health_checks.py  test_http_app.py  test_ingest_flow.py  test_query_edge_cases.py  test_query_flow.py  test_rag_pipeline.py  test_rbac_filtering.py  test_reindex.py  test_self_serve_flow.py
backend/tests/unit/: test_infra_caddy_tls.py  test_infra_ops_scripts.py
docs/: NEXT_WORK.txt
(+268 files in other folders)
