[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedlyzer-backend"
version = "0.1.0"
description = "Backend services for Smart Office Librarian / Embedlyzer"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
	{ name = "Engineering Team" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
